数据处理流程加固：反序列化白名单、凭据排除、并行读取
补齐扫描到持久化这条链路两端此前未覆盖的部分。索引格式保持 v5，
port 接口、发布语义与远程 RAG 门禁均未改动。

安全
- IndexStore 加 ObjectInputFilter 包级白名单，尾部 !* 拒绝对象图之外
  的一切类，阻断经 POI/PDFBox/commons 的 gadget chain（CWE-502）。
  快照文件位于用户可写目录，此前直接交给无限制 readObject。
- 新增 SensitiveFilePolicy：.env/id_rsa/*.pem/.ssh 等凭据文件与目录不
  进入索引。召回正文会随远程 RAG 发出，而 plain-text reader 收
  .properties/.json/.yaml，此前存在本机密钥被切成 chunk 送出的路径。
- 新增 ScanBudget：文件数、总字节、目录深度上限。快照全量驻留内存，
  误选驱动器根目录此前会在构建可被取消之前耗尽堆。
- 折叠嵌套数据源根，同一文件不再按两个相对路径各索引一次。

性能（16 核实测，5 次取最优）
- read+chunk 线程池并行，结果按原扫描下标回收，chunk 顺序与身份同串行
  逐位一致。137 files/965KB 94→35ms；50 files/54MB 758→244ms。
- FileFingerprint 增 size+mtime 快路径，命中时沿用已发布 hash 不重读
  文件。50 files/54MB 的 fingerprint 阶段 74→10ms。
  verifyContentHash=true 可强制全量，测试证明两条路径结果一致。
- stageMillis 拆出 fingerprint 阶段，哈希开销此前被并入 readAndChunk。

完整性
- PlainTextDocumentReader 嗅探并剥离 BOM，支持 UTF-16LE/BE。此前 UTF-8
  签名会把 U+FEFF 泄漏进首个词法单元，UTF-16 文档被误判为二进制丢弃。
  VERSION 1→2，只触发 plain-text 负责格式的重建。
- 补齐 csv/tsv/proto/graphql/tf/lua 等扩展名，代码类同步进
  CODE_EXTENSIONS。CHUNKING_VERSION 不变，避免无意义的全库重建。
- 不支持格式与符号链接由静默丢弃改为聚合上报。

测试 79 项通过（新增 8 项）。IndexStoreSecurityTest 用置于白名单之外的
UnexpectedGadget 断言 readObject 从未执行，以区分"过滤器生效"与"最终
类型不匹配"——两者都会返回 empty。真实 ONNX 质量门禁 Recall@5 1.000、
MRR@10 1.000、nDCG@10 0.991 未受影响。